# ACC

./: .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/src/: db.rs  main.rs  models.rs
apps/desktop/src-tauri/src/commands/: accounts.rs  auth.rs  companies.rs  entries.rs  exports.rs  mod.rs  payroll.rs  reports.rs
apps/desktop/src/components/: Layout.tsx
apps/desktop/src/components/ui/: badge.tsx  button.tsx  empty-state.tsx  input.tsx  modal.tsx  toaster.tsx
apps/desktop/src/pages/: CompaniesPage.tsx  DashboardPage.tsx  SetupPage.tsx  SocialSecurityPage.tsx
apps/desktop/src/pages/accounting/: ChartOfAccountsPage.tsx  GeneralLedgerPage.tsx  JournalEntryPage.tsx  ReportsPage.tsx
apps/desktop/src/pages/auth/: LoginPage.tsx
apps/desktop/src/store/: authStore.ts  companyStore.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/types/: accounting.ts
services/db/migrations/: 001_initial_schema.sql  002_thai_coa_seed.sql
